# listdict

./: README.rst  pyproject.toml  setup.py
doc/: header.rst  make.sh  readme.ipynb
listdict/: base.py  db.py
